# FUCKYOU-TESLA-FSD

./: .gitignore  CanFeather.ino  README.md
.github/workflows/: codeql.yml  secret-scan.yml  test.yml  workflow-lint.yml
docs/: HOW_IT_WORKS.md  can_meaning.txt
esp32/: CanESP32.ino  esp32.ino  example.ino
esp32-idf/: CMakeLists.txt  HARDWARE_VALIDATION.md  README.md  partitions_release.csv  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.release.defaults
esp32-idf/main/: CMakeLists.txt  auth.cpp  auth.h  can_fast_path.cpp  can_fast_path.h  can_logger.cpp  can_logger.h  esp32_app.cpp  ota.cpp  ota.h  web_server.cpp  web_server.h  wifi_ap.cpp  wifi_ap.h
feather/: CanFeather.ino  feather.ino  vehicle_logic.h
feather-flood/: feather-flood.ino  feather_flood_impl.h
shared/: vehicle_logic.h
test/: Makefile  test_flood_logic  test_flood_logic.cpp  test_handlers.cpp
